# AI-ML-Project

./: CMakeLists.txt  Info.plist.in  ProjektP.md  README.md  audio_processor.cpp  audio_processor.h  audio_processor.py  libs.txt  main.cpp  main.mm  main.py  ml_model.cpp  ml_model.h  ml_model.py  run.sh  txt2xml.py  xml2txt.py
cmake/: EnsureVcpkg.cmake
